# dili-causality-agents

./: .gitignore  README.md  pyproject.toml
examples/results/tofacitinib/claude_sonnet_4/RECAM_2025-09-13T08-13-40/: dili_assessment_report.md  dili_information.json  dili_scores.json  diliexpert_review_report.md
examples/results/tofacitinib/deepseek_chat/RECAM_2025-09-13T08-43-12/: dili_assessment_report.md  dili_information.json  dili_scores.json  diliexpert_review_report.md
examples/results/tofacitinib/deepseek_reasoner/RECAM_2025-09-13T08-30-21/: dili_information.json
examples/results/tofacitinib/gemini_2_5_pro/RECAM_2025-09-13T08-02-40/: dili_assessment_report.md  dili_information.json  dili_scores.json
examples/results/tofacitinib/gpt_4o/RECAM_2025-09-13T07-52-06/: dili_assessment_report.md  dili_information.json  dili_scores.json  diliexpert_review_report.md
examples/results/tofacitinib/gpt_5/RECAM_2025-09-13T07-53-57/: dili_information.json  dili_scores.json
examples/results/tofacitinib/gpt_5_chat/RECAM_2025-09-13T09-15-21/: dili_assessment_report.md  dili_information.json  dili_scores.json
examples/results/tofacitinib/gpt_5_nano/RECAM_2025-09-13T07-46-36/: dili_assessment_report.md  dili_information.json  dili_scores.json  diliexpert_review_report.md
src/: crew.py  main.py  utils.py
src/agents/: crew.py  main.py
src/agents/config/: agents.yaml
src/agents/db/: chroma.sqlite3
src/agents/tools/: recam.py
src/config/: tasks.yaml
src/key_info/: key_info.py
src/schemas/: agent_schemas.py
src/tools/: pdf_tools.py
(+14 files in other folders)
